--- a/face-detection.html
+++ b/face-detection.html
@@ -75,10 +75,10 @@
 </div>
 <div id="status">Loading face detection model…</div>
 
-<!-- TensorFlow.js core -->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.17.0/dist/tf.min.js"></script>
+<!-- TensorFlow.js core (3.x is required for blazeface 0.1.0 compatibility) -->
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
 <!-- BlazeFace: lightweight face detection model optimized for mobile -->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/blazeface@0.1.0/dist/blazeface.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/blazeface@0.1.0/dist/blazeface.js"></script>
 
 <script>
   const video  = document.getElementById('video');
@@ -210,6 +210,8 @@
       detect();
     } catch (e) {
       console.error(e);
+      status.style.color = '#ff4444';
+      status.textContent = `Error: ${e.message || e}`;
     }
   })();
 </script>
