--- a/face-detection.html
+++ b/face-detection.html
@@ -78,7 +78,7 @@
 <!-- TensorFlow.js core (3.x is required for blazeface 0.1.0 compatibility) -->
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
 <!-- BlazeFace: lightweight face detection model optimized for mobile -->
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/blazeface@0.1.0/dist/blazeface.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/blazeface@0.1.0/dist/blazeface.umd.js"></script>
 
 <script>
   const video  = document.getElementById('video');
