Fix inference loop silently dying on error
Without a try/catch, any exception inside inferenceLoop (e.g. a
TensorFlow error after extended use) terminates the while(true) loop
and freezes latestPredictions at the last position — causing the box
to appear stuck. Now errors are caught, predictions are cleared, and
the loop retries after 100ms.

--- a/face-detection.html
+++ b/face-detection.html
@@ -195,11 +195,17 @@
   // Inference loop: runs as fast as the model allows, independent of rAF.
   async function inferenceLoop() {
     while (true) {
-      if (model && video.readyState >= 2) {
-        latestPredictions = await model.estimateFaces(video, false /* returnTensors */);
-        if (latestPredictions.length > 0) status.textContent = '';
-      } else {
-        await new Promise(r => setTimeout(r, 50));
+      try {
+        if (model && video.readyState >= 2) {
+          latestPredictions = await model.estimateFaces(video, false /* returnTensors */);
+          if (latestPredictions.length > 0) status.textContent = '';
+        } else {
+          await new Promise(r => setTimeout(r, 50));
+        }
+      } catch (e) {
+        console.warn('Inference error, retrying:', e);
+        latestPredictions = [];
+        await new Promise(r => setTimeout(r, 100));
       }
     }
   }
